# requela

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: notify-pr-closed.yaml  on-release-main.yml  pr-build-merge.yaml
src/requela/: __init__.py  dataclasses.py  exceptions.py  filters.py  grammar.lark  parser.py  rules.py  transformer.py
src/requela/builders/: __init__.py  base.py  django.py  sqlalchemy.py
tests/: conftest.py  test_parser.py
tests/builders/django/: test_comparison.py  test_logical.py  test_ordering.py  test_relationship.py  utils.py
tests/builders/sqlalchemy/: test_comparison.py  test_logical.py  test_ordering.py  test_relationship.py
tests/django/: filters.py  models.py  rules.py  test_comparison.py  test_filters.py  test_logical.py  test_ordering.py  test_relationship.py  test_rules.py
tests/sqlalchemy/: filters.py  models.py  rules.py  test_comparison.py  test_filters.py  test_logical.py  test_ordering.py  test_relationship.py  test_rules.py  utils.py
